@@ -1,0 +1,5 @@
+# delimited test file
+BUY,1000000,BT.L,MR. SMITH,325
+SELL,500000,BT.L,MR. SMITH,324
+SELL,25000,BT.L,MR. JONES,321
+BUY,1000000,BT.L,MR. SMITH,325
