@@ -1,0 +1,2 @@
+# value properties
+value=something
